--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,14 +1,18 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 #main-content {
-    max-width: 940px;
-    padding: 2em 3em;
-    margin: 0 auto 20px;
-    background-color: #fff;
-    border: 1px solid #e5e5e5;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+  padding: 2em 3em;
+  margin: 0 auto 20px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.streaming-result-container {
+  max-height: 450px;
+  overflow: scroll;
 }
